--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
     "grunt-contrib-uglify": "^2.0.0",
     "mongoose": "^4.5.8",
     "path": "^0.12.7"
+  },
+
+  "engines":{
+    "node": "5.0.0"
   }
 }
